Lint checks for templates.

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,9 @@ sensitive.py
 
 # Vscode settings
 **/launch.json
+
+# Ignore Node.js package files and output from eslint_prepare.py
+package.json
+package-lock.json
+node_modules/
+output_js/
