Rays idle scenario with colored ascii art.

--- a/app/data_files/99_Unformed_Ideas.json
+++ b/app/data_files/99_Unformed_Ideas.json
@@ -84,7 +84,7 @@
         }
     ],
     "overall": {
-        "description": "Look through this list and take inspiration from one of these <c=\"green\">ideas</c> to start from a <a href=\"/configure\">blank setup</a>. Unlike other pre-built scenarios, these have not really been tried or fully thought out.",
+        "description": "Look through this list and take inspiration from one of these ideas to start from a <a href=\"/configure\">blank setup</a>. Unlike other pre-built scenarios, these have not really been tried or fully thought out.",
         "number_format": "en_US",
         "slots": [],
         "title": "Unformed Ideas",
