Enforce item storage type. Sort scenarios by type.

--- a/app/data_files/99_Unformed_Ideas.json
+++ b/app/data_files/99_Unformed_Ideas.json
@@ -84,7 +84,9 @@
         }
     ],
     "overall": {
-        "description": "Look through this list and take inspiration from one of these ideas to start from a <a href=\"/configure\">blank setup</a>. Unlike other pre-built scenarios, these have not really been tried or fully thought out.",
+        "description": "Look through this list and take inspiration from one of them, beginning with a <a href=\"/configure\">blank setup</a>.",
+        "progress_type": "Various",
+        "multiplayer": true,
         "number_format": "en_US",
         "slots": [],
         "title": "Unformed Ideas",
