Lumber scenario. Adjust event die max. Revert storage type pile changes but keep button changes.

--- a/app/data_files/99_Unformed_Ideas.json
+++ b/app/data_files/99_Unformed_Ideas.json
@@ -5,7 +5,7 @@
     "items": [],
     "locations": [
         {
-            "description": "- The problem is clear, but you'll need to decide how to <c=\"green\">solve it</c>.\r\n- Chop down trees to build a raft, or swim across (might want to practice first), or build a bridge, or look for vines.\r\n- Alternatively, you could play an <c=\"green\">escape room</c>.\r\n\r\nShouldn't last indefinitely, as many scenarios could.",
+            "description": "• The problem is clear, but you'll need to decide how to <c=\"green\">solve it</c>.\r\n• Chop down trees to build a raft, or swim across (might want to practice first), or build a bridge, or look for vines.\r\n• Alternatively, you could play an <c=\"green\">escape room</c>.\r\n\r\nShouldn't last indefinitely, as many scenarios could.",
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
@@ -31,7 +31,7 @@
             "toplevel": true
         },
         {
-            "description": "- Various forms of <c=\"green\">transportation</c> for part of the trip: train, bus, taxi, plane, boat, wagon.\r\n- Buy food as well as tickets, with a limited supply of <c=\"green\">money</c>.\r\n- Consider a foreign country, with some descriptions in other <c=\"green\">languages</c>. Include English translations if you plan on sharing the scenario with a wider audience.\r\n- Keep your party safe and healthy through setbacks and challenges.\r\n- The goal could be reaching new territory to settle, winning a bet, or arriving at a vacation spot.\r\n\r\nClassic examples are the game <i>Oregon Trail</i> and the book <i>Around the World in 80 Days</i> by Jules Verne.",
+            "description": "• Various forms of <c=\"green\">transportation</c> for part of the trip: train, bus, taxi, plane, boat, wagon.\r\n• Buy food as well as tickets, with a limited supply of <c=\"green\">money</c>.\r\n• Consider a foreign country, with some descriptions in other <c=\"green\">languages</c>. Include English translations if you plan on sharing the scenario with a wider audience.\r\n• Keep your party safe and healthy through setbacks and challenges.\r\n• The goal could be reaching new territory to settle, winning a bet, or arriving at a vacation spot.\r\n\r\nClassic examples are the game <i>Oregon Trail</i> and the book <i>Around the World in 80 Days</i> by Jules Verne.",
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
@@ -44,7 +44,7 @@
             "toplevel": true
         },
         {
-            "description": "- Play at <c=\"green\">politics</c> to get elected. Try an inspiring slogan to gain popularity, such as, <i>Change for a brighter future!</i>\r\n- Persuade congress to pass important laws that the people care about, such as, <i>More Dogs and Fewer Cats.</i>\r\n- Build a <c=\"green\">bigger city</c>, with transportation, schools, hospitals, and fire departments.\r\n\r\n<i>SimCity</i> is a good example of city-building, although not the diplomacy side.",
+            "description": "• Play at <c=\"green\">politics</c> to get elected. Try an inspiring slogan to gain popularity, such as, <i>Change for a brighter future!</i>\r\n• Persuade congress to pass important laws that the people care about, such as, <i>More Dogs and Fewer Cats.</i>\r\n• Build a <c=\"green\">bigger city</c>, with transportation, schools, hospitals, and fire departments.\r\n\r\n<i>SimCity</i> is a good example of city-building, though it doesn't go much into diplomacy.",
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
@@ -70,7 +70,7 @@
             "toplevel": true
         },
         {
-            "description": "\u2022 For example, <i>Underwater Abyss</i> \u2014 legends speak of a nexus where all currents meet, with healing powers to save a loved one who is gravely ill.\r\n\u2022 <c=\"green\">Difficulties</c> such as pressure, with <c=\"green\">features to explore</c> such as sunken ships.\r\n\u2022 A different setting could be the desert, with tombs and traps.\r\n\r\nAn RPG similar to the pre-built <i>Dungeon Crawl</i> scenario, except with less focus on fighting and more on tricky situations.\r\n\r\nThe <i>Choose Your Own Adventure</i> books beautifully demonstrate this type of story.",
+            "description": "\u2022 For example, <i>Underwater Abyss</i> \u2014 legends speak of a nexus where all currents meet, with healing powers to save a loved one who is gravely ill.\r\n\u2022 <c=\"green\">Difficulties</c> such as pressure, with <c=\"green\">features to explore</c> such as sunken ships.\r\n\u2022 Or set in the desert, with tombs and traps.\r\n\r\nAn RPG similar to the pre-built <i>Dungeon Crawl</i> scenario, except with less focus on fighting and more on tricky situations.\r\n\r\nThe <i>Choose Your Own Adventure</i> books beautifully demonstrate this type of story.",
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
