Only use character's progress data that matches the current item.

--- a/app/data_files/99_Unformed_Ideas.json
+++ b/app/data_files/99_Unformed_Ideas.json
@@ -18,7 +18,7 @@
             "toplevel": true
         },
         {
-            "description": "Attempt to take over the world, or at least a significant part of it. Could also be in outer space.\r\n\r\nDevelop <c=\"green\">technology</c> and build resources along the way.\r\n\r\nThis could be simple like <i>Risk</i>, or more complex like <i>Civilization</i> or <i>Stellaris</i>.",
+            "description": "Attempt to take over the world, or at least a significant part of it. Could also be in outer space.\r\n\r\nDevelop <c=\"green\">technology</c> and build resources along the way.\r\n\r\nThis could be simple like <i>Risk</i>, or complex like <i>Civilization</i>.",
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
