Get production progress bar working after the server response change in commit 7c04430.

--- a/app/data_files/99_Unformed_Ideas.json
+++ b/app/data_files/99_Unformed_Ideas.json
@@ -70,7 +70,7 @@
             "toplevel": true
         },
         {
-            "description": "\u2022 For example, <i>Underwater Abyss</i> \u2014 legends speak of a nexus where all currents meet, with healing powers to save a loved one who is gravely ill.\r\n\u2022 <c=\"green\">Difficulties</c> such as pressure, with <c=\"green\">features to explore</c> such as sunken ships.\r\n\u2022 Or set in the desert, with tombs and traps.\r\n\r\nAn RPG similar to the pre-built <i>Dungeon Crawl</i> scenario, except with less focus on fighting and more on tricky situations.\r\n\r\nThe <i>Choose Your Own Adventure</i> books beautifully demonstrate this type of story.",
+            "description": "\u2022 For example, <i>Underwater Abyss</i> \u2014 legends speak of a nexus where all currents meet, with healing powers to save a loved one who is gravely ill.\r\n\u2022 <c=\"green\">Difficulties</c> such as pressure, with <c=\"green\">features to explore</c> such as sunken ships.\r\n\u2022 Or set in the desert, with tombs and traps.\r\n\r\nAn RPG similar to the pre-built <i>Dungeon Crawl</i> scenario, except with less focus on fighting and more on tricky situations.\r\n\r\nThe <i>Choose Your Own Adventure</i> books masterfully demonstrate this type of story.",
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
