All event types can change values.

--- a/app/data_files/99_Unformed_Ideas.json
+++ b/app/data_files/99_Unformed_Ideas.json
@@ -84,7 +84,7 @@
         }
     ],
     "overall": {
-        "description": "Look through this list and take inspiration from one of them, beginning with a <a href=\"/configure\">blank setup</a>.",
+        "description": "A list to look through and take inspiration from. Begin with a <a href=\"/configure\">blank setup</a> and copy the title and description of your choice into <i>Overall Settings</i>.",
         "progress_type": "Various",
         "multiplayer": true,
         "number_format": "en_US",
