Added Building example scenario from Unformed Ideas.

--- a/app/data_files/99_Unformed_Ideas.json
+++ b/app/data_files/99_Unformed_Ideas.json
@@ -5,7 +5,7 @@
     "items": [],
     "locations": [
         {
-            "description": "• The problem is clear, but you'll need to decide how to <c=\"green\">solve it</c>.\r\n• Chop down trees to build a raft, or swim across (might want to practice first), or build a bridge, or look for vines.\r\n• Alternatively, you could play an <c=\"green\">escape room</c>.\r\n\r\nShouldn't last indefinitely, as many scenarios could.",
+            "description": "• The problem is clear, but you'll need to decide how to <c=\"green\">solve it</c>.\r\n• Chop down trees to build a raft, or swim across (might want to practice first), or build a bridge, or look for vines.\r\n• Alternatively, play an <c=\"green\">escape room</c>.\r\n\r\nShouldn't last indefinitely, as many scenarios could.",
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
@@ -52,19 +52,6 @@
             "items": [],
             "masked": false,
             "name": "Mayor",
-            "progress": {},
-            "quantity": 0.0,
-            "toplevel": true
-        },
-        {
-            "description": "Construct <c=\"green\">locations and items</c> to precisely and beautifully describe architecture.\r\n\r\nDescribe both structure and function, for example an exquisite (or run-down) dining room along with people seated at the table with food. The people won't take actions, so they could be represented in the game as <i>items rather than characters</i>.\r\n\r\nOperate on a budget or have access to unlimited resources.\r\n\r\nThis could be played cooperatively or competitively. Optionally, vote at the end to determine who wins.",
-            "destinations": [],
-            "dimensions": [0,0],
-            "excluded": [0,0,0,0],
-            "id": 27,
-            "items": [],
-            "masked": false,
-            "name": "Building",
             "progress": {},
             "quantity": 0.0,
             "toplevel": true
