--- a/app/data_files/99_Unformed_Ideas.json
+++ b/app/data_files/99_Unformed_Ideas.json
@@ -9,7 +9,7 @@
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
-            "id": 28,
+            "id": 3,
             "items": [],
             "masked": false,
             "name": "River Crossing",
@@ -22,7 +22,7 @@
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
-            "id": 29,
+            "id": 4,
             "items": [],
             "masked": false,
             "name": "Empire",
@@ -31,11 +31,11 @@
             "toplevel": true
         },
         {
-            "description": "• Various forms of <c=\"green\">transportation</c> for part of the trip: train, bus, taxi, plane, boat, wagon.\r\n• Buy food as well as tickets, with a limited supply of <c=\"green\">money</c>.\r\n• Consider a foreign country, with some descriptions in other <c=\"green\">languages</c>. Include English translations if you plan on sharing the scenario with a wider audience.\r\n• Keep your party safe and healthy through setbacks and challenges.\r\n• The goal could be reaching new territory to settle, winning a bet, or arriving at a vacation spot.\r\n\r\nClassic examples are the game <i>Oregon Trail</i> and the book <i>Around the World in 80 Days</i> by Jules Verne.",
+            "description": "• Various forms of <c=\"green\">transportation</c> for part of the trip: train, bus, taxi, plane, boat, wagon.\r\n• Buy food as well as tickets, with a limited supply of <c=\"green\">money</c>.\r\n• Consider a foreign country, with some descriptions in other <c=\"green\">languages</c>. Include English translations if you plan on sharing the scenario with a wider audience.\r\n• Keep your party safe and healthy through setbacks and challenges.\r\n• The goal could be reaching new territory to settle, winning a bet, or arriving at a vacation spot.\r\n\r\nClassic examples are <i>Oregon Trail</i> and Jules Verne's <i>Around the World in 80 Days</i>.",
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
-            "id": 26,
+            "id": 1,
             "items": [],
             "masked": false,
             "name": "Journey",
@@ -48,7 +48,7 @@
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
-            "id": 30,
+            "id": 5,
             "items": [],
             "masked": false,
             "name": "Mayor",
@@ -61,10 +61,23 @@
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
-            "id": 31,
+            "id": 6,
             "items": [],
             "masked": false,
             "name": "Adventure",
+            "progress": {},
+            "quantity": 0.0,
+            "toplevel": true
+        },
+        {
+            "description": "Grow, train, and play with an animal or fantasy creature.\r\n\r\n• Track <c=\"green\">skills and needs</c> with general items.\r\n• There is a child responsible for taking care of and enjoying it.",
+            "destinations": [],
+            "dimensions": [0,0],
+            "excluded": [0,0,0,0],
+            "id": 7,
+            "items": [],
+            "masked": false,
+            "name": "Pet",
             "progress": {},
             "quantity": 0.0,
             "toplevel": true
