Rays: change BSF duration scaling to linear.

--- a/app/data_files/99_Unformed_Ideas.json
+++ b/app/data_files/99_Unformed_Ideas.json
@@ -31,7 +31,7 @@
             "toplevel": true
         },
         {
-            "description": "• Various forms of <c=\"green\">transportation</c> for part of the trip: train, bus, taxi, plane, boat, wagon.\r\n• Buy food as well as tickets, with a limited supply of <c=\"green\">money</c>.\r\n• Consider a foreign country, with some descriptions in other <c=\"green\">languages</c>. Include English translations if you plan on sharing the scenario with a wider audience.\r\n• Keep your party safe and healthy through setbacks and challenges.\r\n• The goal could be reaching new territory to settle, winning a bet, or arriving at a vacation spot.\r\n\r\nClassic examples are <i>Oregon Trail</i> and Jules Verne's <i>Around the World in 80 Days</i>.",
+            "description": "• Various forms of <c=\"green\">transportation</c> for part of the trip: train, bus, taxi, plane, boat, wagon.\r\n• Buy food as well as tickets, with a limited supply of <c=\"green\">money</c>.\r\n• Consider a foreign country, with some descriptions in other <c=\"green\">languages</c>. Include English translations if you plan on sharing the scenario with a wider audience.\r\n• Keep your party safe and healthy through setbacks and challenges.\r\n• The goal could be reaching new territory to settle, winning a bet, or arriving at a vacation spot.\r\n\r\nClassic examples are <i>Oregon Trail</i> and <i>Around the World in 80 Days</i>.",
             "destinations": [],
             "dimensions": [0,0],
             "excluded": [0,0,0,0],
@@ -52,19 +52,6 @@
             "items": [],
             "masked": false,
             "name": "Mayor",
-            "progress": {},
-            "quantity": 0.0,
-            "toplevel": true
-        },
-        {
-            "description": "\u2022 For example, <i>Underwater Abyss</i> \u2014 legends speak of a nexus where all currents meet, with healing powers to save a loved one who is gravely ill.\r\n\u2022 <c=\"green\">Difficulties</c> such as pressure, with <c=\"green\">features to explore</c> such as sunken ships.\r\n\u2022 Or set in the desert, with tombs and traps.\r\n\r\nAn RPG similar to the pre-built <i>Dungeon Crawl</i> scenario, except with less focus on fighting and more on tricky situations.\r\n\r\nThe <i>Choose Your Own Adventure</i> books masterfully demonstrate this type of story.",
-            "destinations": [],
-            "dimensions": [0,0],
-            "excluded": [0,0,0,0],
-            "id": 6,
-            "items": [],
-            "masked": false,
-            "name": "Adventure",
             "progress": {},
             "quantity": 0.0,
             "toplevel": true
